# product_shop_project

./: README.md  pyproject.toml
basket/: models.py  permissions.py  serializers.py  urls.py  views.py
basket/migrations/: 0001_initial.py
config/: settings.py  urls.py
shop/: admin.py  models.py  paginators.py  serializers.py  urls.py  views.py
shop/management/commands/: fill_db.py
shop/migrations/: 0001_initial.py  0002_remove_product_dimensions_picture_and_more.py  0003_alter_picture_picture_alter_subcategory_category.py
users/: models.py
users/migrations/: 0001_initial.py
