[tool.poetry]
name = "product-shop-project"
version = "0.1.0"
description = ""
authors = ["Uliana Semyonova <i@ulianasemyonova.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
psycopg2 = "^2.9.9"
ipython = "^8.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
